--- a/tese-tcc/1-intro/texto.tex
+++ b/tese-tcc/1-intro/texto.tex
@@ -4,6 +4,14 @@
 
 % A introdução geral do documento pode ser apresentada através das seguintes seções: Desafio, Motivação, Proposta, Contribuição e Organização do documento (especificando o que será tratado em cada um dos capítulos). O Capítulo 1 não contém subseções\footnote{Ver o Capítulo \ref{cap-exemplos} para comentários e exemplos de subseções.}.
 
+Nos últimos anos, o crescimento urbano acelerado e a expansão cada vez maior da frota de veículos nas estradas têm colocado em foco a urgência de uma gestão de estacionamentos eficiente para as autoridades municipais e os gestores de infraestruturas urbanas. A busca por soluções inovadoras que otimizem o uso desses espaços, oferecendo comodidade aos motoristas, reduzindo congestionamentos e minimizando o impacto ambiental, tem sido alvo de extensas pesquisas. Nesse contexto, a implementação de técnicas de visão computacional e aprendizado de máquina se destaca como uma abordagem promissora para aprimorar a gestão de estacionamentos\cite{systematic-reviews}.
 
+Um dos principais desafios na administração de estacionamentos reside na identificação e classificação das vagas como ocupadas ou livres. Existem algumas abordagens para realizar essa tarefa, como a utilização de sensores instalados em cada vaga para determinar sua ocupação ou o uso de câmeras de monitoramento estrategicamente posicionadas para o reconhecimento e classificação das vagas por meio das imagens captadas pelas câmeras. Esta última alternativa se destaca pela sua viabilidade, pois é uma alternativa de baixo custo e tempo de implementação, e portanto será o foco desse trabalho.
+
+Os modelos de classificação em aprendizado de máquina demandam conjuntos de dados de treinamento com qualidade, diversidade e representatividade do mundo real. Contudo, a coleta desses dados é uma tarefa complexa e dispendiosa, requerendo tempo, recursos financeiros e enfrentando desafios na rotulagem dos dados coletados, além de questões de privacidade. A comunidade acadêmica disponibiliza alguns conjuntos de dados que podem ser usados para o problema de classificação de vagas, como é o caso da PkLot\cite{pklot1} e CNRPark-EXT\cite{cnrpark}, que contrinuem significativamente para as pesquisas nessa área. No entanto, dado que é um problema em evolução contínua, a necessidade de novos dados para treinamento e validação de modelos permanece constante.
+
+Neste trabalho, propõe-se a utilização de dados sintéticos como forma de sobrepujar os desafios existentes no uso de dados reais. Os dados gerados sintéticamente serão utilizados no treinamento de modelos de classificação com a finalidade de classificar vagas de estacionamento. Dados sintéticos são dados gerados de forma artificial e algorítmica, assemelhando-se aos dados reais, embora não derivem de observações diretas ou coletas reais. Isso possibilita superar alguns desafios associados à coleta de dados reais, permitindo a criação de conjuntos de dados volumosos, com maior variedade e a um custo reduzido, em um período de tempo menor.
+
+Diversas ferramentas podem ser empregadas para gerar dados sintéticos. Neste trabalho será utilizado o motor gráfico Unity3D e seu pacote voltado para visão computacional, o Unity-perception \cite{unity-perception}. Será adotada uma Rede Neural Convolucional (CNN) e utilizado o processo de transfer-learning, utilizando a MobileNetv2 como modelo base, para o treinamento com os dados sintéticos gerados, validando sua acurácia por meio de testes com imagens dos conjuntos de dados PkLot e CNRPark.
 
 %=====================================================
