--- a/tese-tcc/main.tex
+++ b/tese-tcc/main.tex
@@ -55,7 +55,7 @@
 % Campos não utilizados podem ser removidos ou comentados.
 
 % título
-\title{Geração de dados sintéticos com Unity para classificação de ocupação de vagas de estacionamento}
+\title{Relatório TCC1 - Geração de dados sintéticos para classificação de ocupação de vagas de estacionamento}
 
 % palavras-chave e keywords (p/ resumo, abstract e metadados do PDF)
 \pchave{Syntetic-Data. Deep-Learning. Classificação.}
@@ -78,7 +78,7 @@
   { \field{Ciência da Computação} }
 
 % data (só o ano)
-\date{2024}
+\date{2023}
 
 % local
 \IfLanguageName{brazilian}
@@ -109,10 +109,10 @@
 %\descr{Documento apresentado como requisito parcial ao exame de qualificação de Mestrado no Programa de Pós-Graduação em Informática, Setor de Ciências Exatas, da Universidade Federal do Paraná}
 
 % trabalho de conclusão de curso
-\descr{Trabalho apresentado como requisito parcial à conclusão do Curso de Bacharelado em Ciência da Computação, Setor de Ciências Exatas, da Universidade Federal do Paraná}
+%\descr{Trabalho apresentado como requisito parcial à conclusão do Curso de Bacharelado em Ciência da Computação, Setor de Ciências Exatas, da Universidade Federal do Paraná}
 
 % trabalho de disciplina
-%\descr{Trabalho apresentado como requisito parcial à conclusão da disciplina XYZ no Curso de Bacharelado em XYZ, Setor de Ciências Exatas, da Universidade Federal do Paraná}
+\descr{Relatório apresentado como requisito à conclusão da disciplina TCC1 no Curso de Bacharelado em CIência da Computação, Setor de Ciências Exatas, da Universidade Federal do Paraná}
 
 % doctorate thesis
 %\descr{Thesis presented as a partial requirement for the degree of Doctor in Computer Science in the Graduate Program in Informatics, Exact Sciences Sector, of the Federal University of Paraná, Brazil}
@@ -136,22 +136,22 @@
 \titlepage
 
 % páginas que só aparecem na versão final (a inclusão é automática)
-\include{0-iniciais/catalografica}	% ficha catalográfica
-\include{0-iniciais/aprovacao}		% folha de aprovação
-\include{0-iniciais/dedica}		% dedicatória
-\include{0-iniciais/agradece}		% agradecimentos
+%\include{0-iniciais/catalografica}	% ficha catalográfica
+%\include{0-iniciais/aprovacao}		% folha de aprovação
+%\include{0-iniciais/dedica}		% dedicatória
+%\include{0-iniciais/agradece}		% agradecimentos
 
 % resumo (português) e abstract (inglês)
-\include{0-iniciais/resumo}
+%\include{0-iniciais/resumo}
 %\include{0-iniciais/abstract}
 
 % listas  de figuras, tabelas, abreviações/siglas, símbolos
-\listoffigures				% figuras
-\clearpage
-\listoftables				% tabelas
-\include{0-iniciais/acronimos}		% acrônimos, deve ser preenchida à mão
-\include{0-iniciais/simbolos}		% símbolos, idem
-\tableofcontents			% sumário
+%\listoffigures				% figuras
+%\clearpage
+%\listoftables				% tabelas
+%\include{0-iniciais/acronimos}		% acrônimos, deve ser preenchida à mão
+%\include{0-iniciais/simbolos}		% símbolos, idem
+%\tableofcontents			% sumário
 
 %=====================================================
 
@@ -161,10 +161,10 @@
 
 % inclusao de cada capítulo, alterar a gosto (do professor de Metodologia)
 \include{1-intro/texto}			% introdução
-\include{2-fundam/texto}		% fundamentação teórica
-%\include{3-arte/texto}			% estado da arte
-%\include{4-proposta/texto}		% proposta
-%\include{5-valida/texto}		% experimentação e validação
+%\include{2-fundam/texto}		% fundamentação teórica
+\include{3-arte/texto}			% estado da arte
+\include{4-proposta/texto}		% proposta
+\include{5-valida/texto}		% experimentação e validação
 %\include{6-conclusao/texto}		% conclusão
 
 %=====================================================
@@ -180,13 +180,13 @@
 %=====================================================
 
 % inclusão de apêndices
-\appendix
+%\appendix
 
 % inclusão de apêndice
-\include{a1-exemplo/texto}
+%\include{a1-exemplo/texto}
 
 % inclusão de apêndice
-\include{a2-exemplo/texto}
+%\include{a2-exemplo/texto}
 
 %=====================================================
 
