--- a/tese-tcc/referencias.bib
+++ b/tese-tcc/referencias.bib
@@ -86,17 +86,6 @@
    year		= {1985}
 }
 
-%%%%% exemplo de artigo em evento
-@conference{objectPose,
-   author	= {Jonathan Tremblay, Thang To, Balakumar Sundaralingam, Yu Xiang, Dieter Fox and Stan Birchfield},
-   title	= {Deep Object Pose Estimation for Semantic Robotic Grasping of Household Objects},
-   booktitle	= {Conference on Robot Learning (CoRL) 2018},
-   address	= {Zurich - Switzerland},
-   pages	= {307-316},
-   month	= {Setember},
-   year		= {2018}
-}
-
 %%%%% exemplo de relatório técnico
 @techreport{bibufpr15,
    author	= {Biblioteca UFPR},
@@ -118,8 +107,55 @@
 
 ==================================== My refs ====================================
 %%%%% exemplo de artigo em evento
+@conference{pklot1,
+   author	= {Paulo Almeida and Luiz S. Oliveira and Eunelson Silva and Alceu Britto and Alessandro Koerich},
+   title	= {Parking Space Detection Using Textural Descriptors},
+   booktitle	= {2013 IEEE International Conference on Systems, Man, and Cybernetics},
+   address	= {Manchester, UK},
+   pages	= {},
+   month	= {October},
+   year		= {2013}
+}
+
+@article{pklot2,
+   author	= {Paulo R.L. de Almeida and Luiz S. Oliveira and Alceu S. Britto Jr. and Eunelson J. Silva Jr. and Alessandro L. Koerich},
+   title	= {PKLot - A robust dataset for parking lot classification},
+   journal	= {Expert Systems with Applications - Elsevier},
+   volume	= {42},
+   number	= {},
+   pages	= {4937-4949},
+   note 	= {Invited paper},
+   month	= {February},
+   year		= {2015}
+}
+
+@article{systematic-review,
+   author	= {Paulo Ricardo Lisboa de Almeida and Jeovane Honório Alves and Rafael Stubs Parpinelli and Jean Paul Barddal},
+   title	= {A systematic review on computer vision-based parking lot management applied on public datasets},
+   journal	= {Expert Systems with Applications - Elsevier},
+   volume	= {198},
+   number	= {},
+   pages	= {957-4949},
+   note 	= {Invited paper},
+   month	= {February},
+   year		= {2022}
+}
+
+
+@article{cnrpark,
+   author	= {Giuseppe Amato and Fabio Carrara and Fabrizio Falchi and Claudio Gennaro and Carlo Meghini and Claudio Vairo},
+   title	= {Deep learning for decentralized parking lot occupancy detection},
+   journal	= {Expert Systems with Applications - Elsevier},
+   volume	= {72},
+   number	= {},
+   pages	= {327-334},
+   note 	= {Invited paper},
+   month	= {October},
+   year		= {2016}
+}
+
 @conference{objectPose,
-   author	= {Jonathan Tremblay, Thang To, Balakumar Sundaralingam, Yu Xiang, Dieter Fox and Stan Birchfield},
+   author	= {Jonathan Tremblay and Thang To and Balakumar Sundaralingam and Yu Xiang and Dieter Fox and Stan Birchfield},
    title	= {Deep Object Pose Estimation for Semantic Robotic Grasping of Household Objects},
    booktitle	= {Conference on Robot Learning (CoRL) 2018},
    address	= {Zurich - Switzerland},
@@ -128,11 +164,38 @@
    year		= {2018}
 }
 
-%%%%% exemplo de URL (páginas Web)
-@misc{TechTarget,
-   title	= {Definition syntetic data},
-   author	= {Kinza Yasar & Nicole Laskowski},
-   howpublished	= {\url{https://www.techtarget.com/searchcio/definition/synthetic-data#:~:text=Synthetic%20data%20is%20information%20that's,machine%20learning%20(ML)%20models.}},
+@conference{domain-random,
+   author	= {Josh Tobin and Rachel Fong and Alex Ray and Jonas Schneider and Wojciech Zaremba and Pieter Abbeel},
+   title	= {Domain randomization for transferring deep neural networks from simulation to the real world},
+   booktitle	= {arXiv:2107.04259 [cs.CV]},
+   address	= {},
+   pages	= {},
+   month	= {July},
+   year		= {2021}
+}
+
+@conference{unity-perception,
+   author	= {Steve Borkman and Adam Crespi and Saurav Dhakad and Sujoy Ganguly and Jonathan Hogins and You-Cyuan Jhang and Mohsen Kamalzadeh and Bowen Li and Steven Leal and Pete Parisi and Cesar Romero and Wesley Smith and Alex Thaman and Samuel Warren and Nupur Yadav},
+   title	= {Unity Perception: Generate Synthetic Data for Computer Vision},
+   booktitle	= {2017 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+   address	= {Vancouver, BC, Canada},
+   pages	= {},
+   month	= {Setember},
+   year		= {2017}
+}
+
+@misc{NDDS,
+   title	= {NDDS: NVIDIA deep learning dataset synthesizer,},
+   author	= {T. To and J. Tremblay and D. McKay and Y. Yamaguchi and K. Leung and A. Balanon and J. Cheng and and S. Birch-field.},
+   howpublished	= {\url{https://github.com/NVIDIA/Dataset_Synthesizer.}},
+   year		= {2018},
+   note		= {Acessado em 07/12/2023}
+}
+
+@misc{fspy,
+   title	= {fSpy - Open source still image camera matching},
+   author	= {Stuffmatic},
+   howpublished	= {\url{https://fspy.io/}},
    year		= {2023},
-   note		= {Acessado em 25/09/2023}
+   note		= {Acessado em 12/12/2023}
 }
